<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Starting.SignUpActivity"
    android:background="@color/background_color"
    android:id="@+id/signUpLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/edtUserNameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                 />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/edtEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleContentDescription="Show"
            >
            <EditText
                android:id="@+id/edtPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleContentDescription="Show"
            >
            <EditText
                android:id="@+id/edtRePasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/edtUserPhoneReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="10"
            >
            <TextView
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Gender"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
<!--                app:base_release_color="@color/colorPrimaryDark"-->
<!--                app:base_press_color="@color/colorAccent"-->
<!--                app:ball_release_color="@color/colorAccent"-->
<!--                app:ball_press_color="@color/colorPrimaryDark"-->
                />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="@color/buttonsBg"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom"
        />

    <ProgressBar
        android:id="@+id/progress_circularReg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>